// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`headline renders correctly with custom props 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding: 1px 0px;
}

@media screen and (max-width: 479px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 32px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: -0.5px;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.21250000000000002em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.275em;
  }
}

@media screen and (min-width: 480px) and (max-width: 767px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 32px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: -0.5px;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.21250000000000002em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.275em;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 36px;
    line-height: 1.1111111111111112;
    font-weight: 500;
    letter-spacing: -0.5px;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.2055555555555556em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2680555555555556em;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 40px;
    line-height: 1.2;
    font-weight: 500;
    letter-spacing: -0.5px;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.25em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3125em;
  }
}

.emotion-1 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #3358CC;
  text-transform: uppercase;
}

.emotion-1 svg {
  fill: #3358CC;
}

@media screen and (max-width: 479px) {
  .emotion-1 {
    margin-right: 12px;
  }
}

@media screen and (min-width: 480px) and (max-width: 767px) {
  .emotion-1 {
    margin-right: 12px;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-1 {
    margin-right: 16px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-1 {
    margin-right: 16px;
  }
}

.emotion-2 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #0A0A0A;
}

.emotion-2 svg {
  fill: #0A0A0A;
}

<section
    class="emotion-0"
  >
    <h5
      class="nk-headline-kicker emotion-1"
    >
      this is kicker 
    </h5>
    <h4
      class="nk-headline-heading emotion-2"
    >
      test
    </h4>
  </section>
</DocumentFragment>
`;

exports[`headline renders correctly with default props, just heading 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding: 1px 0px;
}

@media screen and (max-width: 479px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 32px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: -0.5px;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.21250000000000002em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.275em;
  }
}

@media screen and (min-width: 480px) and (max-width: 767px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 32px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: -0.5px;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.21250000000000002em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.275em;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 36px;
    line-height: 1.1111111111111112;
    font-weight: 500;
    letter-spacing: -0.5px;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.2055555555555556em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2680555555555556em;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 40px;
    line-height: 1.2;
    font-weight: 500;
    letter-spacing: -0.5px;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.25em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3125em;
  }
}

.emotion-1 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #0A0A0A;
}

.emotion-1 svg {
  fill: #0A0A0A;
}

<section
    class="emotion-0"
  >
    <h1
      class="nk-headline-heading emotion-1"
    >
      test
    </h1>
  </section>
</DocumentFragment>
`;

exports[`headline renders correctly with default props, with heading and kicker 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding: 1px 0px;
}

@media screen and (max-width: 479px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 32px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: -0.5px;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.21250000000000002em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.275em;
  }
}

@media screen and (min-width: 480px) and (max-width: 767px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 32px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: -0.5px;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.21250000000000002em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.275em;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 36px;
    line-height: 1.1111111111111112;
    font-weight: 500;
    letter-spacing: -0.5px;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.2055555555555556em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2680555555555556em;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 40px;
    line-height: 1.2;
    font-weight: 500;
    letter-spacing: -0.5px;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.25em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3125em;
  }
}

.emotion-1 {
  color: #3358CC;
  text-transform: uppercase;
}

.emotion-1 svg {
  fill: #3358CC;
}

@media screen and (max-width: 479px) {
  .emotion-1 {
    margin-right: 12px;
  }
}

@media screen and (min-width: 480px) and (max-width: 767px) {
  .emotion-1 {
    margin-right: 12px;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-1 {
    margin-right: 16px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-1 {
    margin-right: 16px;
  }
}

.emotion-2 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #0A0A0A;
}

.emotion-2 svg {
  fill: #0A0A0A;
}

<section
    class="emotion-0"
  >
    <span
      class="nk-headline-kicker emotion-1"
    >
      this is kicker 
    </span>
    <h1
      class="nk-headline-heading emotion-2"
    />
  </section>
</DocumentFragment>
`;

exports[`headline renders correctly with overriden props 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: "Bitter",serif;
  font-size: 28px;
  line-height: 1.1428571428571428;
  font-weight: 500;
  letter-spacing: -0.5px;
  padding: 1px 0px;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.22142857142857142em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.2839285714285714em;
}

.emotion-1 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #3358CC;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-1 svg {
  fill: #3358CC;
}

.emotion-1:hover:not(:disabled) {
  color: #2B4AAB;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-1:hover:not(:disabled) svg {
  fill: #2B4AAB;
}

.emotion-1:active:not(:disabled) {
  color: #213A82;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-1:active:not(:disabled) svg {
  fill: #213A82;
}

.emotion-1:visited:not(:disabled) {
  color: #5E44E4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-1:visited:not(:disabled) svg {
  fill: #5E44E4;
}

.emotion-1:visited:hover:not(:disabled) {
  color: #5E44E4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-1:visited:hover:not(:disabled) svg {
  fill: #5E44E4;
}

<section
    class="emotion-0"
  >
    <h1
      class="nk-headline-heading emotion-1"
    />
  </section>
</DocumentFragment>
`;
